# siscom-trips

./: .env  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  migration_add_odometer_fields.sql  schema.sql  siscom.proto
.github/workflows/: deploy.yml
src/: config.rs  kafka.rs  main.rs  mqtt.rs
src/db/: mod.rs  queries.rs
src/models/: message.rs  mod.rs  trip.rs  trip_alerts.rs  trip_points.rs
src/processor/: message_processor.rs
